--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8" />
-    <title>Chat Room</title>
-</head>
-
-<body>
+{% block content %}
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
+    <input class="btn btn-sm btn-primary mt-1" id="chat-message-submit" type="button" value="Send">
     {{ room_name|json_script:"room-name" }}
+{% endblock %}
+
+{% block script %}
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
@@ -47,6 +44,4 @@
             messageInputDom.value = '';
         };
     </script>
-</body>
-
-</html>
+{% endblock %}
