--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,13 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Login/Register</a>
+                        {% if request.user.is_authenticated %}
+                            <a href="{% url 'logout' %}" class="nav-link">
+                                Logout {{ user.username }}
+                            </a>
+                        {% else %} 
+                            <a class="nav-link" href="{% url 'login' %}">Login/Register</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
@@ -37,6 +43,8 @@
     </nav>
     
     <div class="container">
+        {% include '_partials/messages.html' %}
+
         {% block content %}
         {% endblock %}
     </div>
